# mimic

./: Cargo.toml  file.star
src/: core.rs  git.rs  main.rs
src/core/: context.rs  destination.rs  mod.rs  origin.rs  transform.rs
