[package]
name = "zebra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocative = "0.3.1"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
git2 = "0.18.1"
serde = "1.0.196"
starlark = "0.11.0"
starlark_derive = "0.11.0"
superconsole = "0.2.0"
